--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "autofileform",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ryan5anderson.github.io/AutoFileForm",
+  "homepage": "https://ohiopylecollege.com/autofileform/michiganstate",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -28,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d build -b gh-pages --dest autofileform/michiganstate"
   },
   "eslintConfig": {
     "extends": [
