--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -b gh-pages --dest autofileform/michiganstate"
+    "deploy": "gh-pages -d build -b gh-pages --dest autofileform/michiganstate --cname ohiopylecollege.com"
   },
   "eslintConfig": {
     "extends": [
