--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "autofileform",
+  "name": "orderform",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://ohiopylecollege.com/autofileform/michiganstate",
+  "homepage": "https://ohiopylecollege.com/orderform/michiganstate",
   "dependencies": {
     "@testing-library/dom": "^10.4.0",
     "@testing-library/jest-dom": "^6.6.3",
@@ -28,7 +28,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -b gh-pages --dest autofileform/michiganstate --cname ohiopylecollege.com"
+    "deploy": "gh-pages -d build -b gh-pages --dest orderform/michiganstate --cname ohiopylecollege.com"
   },
   "eslintConfig": {
     "extends": [
