--- a/package.json
+++ b/package.json
@@ -28,7 +28,8 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -b gh-pages --dest orderform --cname ohiopylecollege.com"
+    "deploy": "gh-pages -d build -b gh-pages --cname ohiopylecollege.com --nojekyll",
+    "deploy:clean": "rm -rf build && npm run build && gh-pages -d build -b gh-pages --cname ohiopylecollege.com --nojekyll"
   },
   "eslintConfig": {
     "extends": [
