--- a/package.json
+++ b/package.json
@@ -28,8 +28,9 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build -b gh-pages --cname ohiopylecollege.com --nojekyll",
-    "deploy:clean": "rm -rf build && npm run build && gh-pages -d build -b gh-pages --cname ohiopylecollege.com --nojekyll"
+    "deploy": "npm run build && git add build -f && git commit -m 'Deploy to gh-pages' && git push origin HEAD:gh-pages --force",
+    "deploy:clean": "rm -rf build && npm run build && gh-pages -d build -b gh-pages --cname ohiopylecollege.com --nojekyll",
+    "deploy:manual": "npm run build && git add build -f && git commit -m 'Deploy to gh-pages' && git subtree push --prefix build origin gh-pages"
   },
   "eslintConfig": {
     "extends": [
