--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/react-dom": "^19.1.6",
     "classnames": "^2.5.1",
     "emailjs-com": "^3.2.0",
+    "firebase": "^12.4.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0",
