--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.7.0",
     "react-scripts": "^5.0.1",
-    "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -49,6 +48,7 @@
     "depcheck": "^1.4.7",
     "eslint-config-react-app": "^7.0.1",
     "gh-pages": "^6.3.0",
-    "ts-prune": "^0.10.3"
+    "ts-prune": "^0.10.3",
+    "typescript": "^5.9.3"
   }
 }
