--- a/package.json
+++ b/package.json
@@ -47,6 +47,8 @@
   "devDependencies": {
     "depcheck": "^1.4.7",
     "eslint-config-react-app": "^7.0.1",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
     "gh-pages": "^6.3.0",
     "ts-prune": "^0.10.3",
     "typescript": "^5.9.3"
