--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,7 +31,7 @@ jobs:
       run: npm ci --legacy-peer-deps
       
     - name: Run build
-      run: npm run build
+      run: CI=false npm run build
       
     - name: Comment on PR
       uses: actions/github-script@v7
@@ -63,7 +63,7 @@ jobs:
       run: npm ci --legacy-peer-deps
       
     - name: Build project
-      run: npm run build
+      run: CI=false npm run build
       
     - name: Deploy to GitHub Pages
       run: |
