--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "deploy": "CI=false npm run build && gh-pages -d build -b gh-pages --cname ohiopylecollege.com --nojekyll"
+    "deploy": "CI=false npm run build && gh-pages -d build -b gh-pages --cname ohiopylecollege.com --nojekyll",
     "check:unused": "ts-prune",
     "check:deps": "depcheck",
     "lint:css": "stylelint 'src/**/*.{css,scss}'"
