--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@types/react": "^19.1.8",
     "@types/react-dom": "^19.1.6",
+    "@vercel/node": "^5.5.12",
     "emailjs-com": "^3.2.0",
     "firebase": "^12.4.0",
     "react": "^19.1.0",
