--- a/vercel.json
+++ b/vercel.json
@@ -6,8 +6,8 @@
   "framework": "create-react-app",
   "rewrites": [
     {
-      "source": "/api/:path*",
-      "destination": "/api/:path*"
+      "source": "/(.*)",
+      "destination": "/index.html"
     }
   ],
   "headers": [
