api connection changes

--- a/vercel.json
+++ b/vercel.json
@@ -6,7 +6,7 @@
   "framework": "create-react-app",
   "rewrites": [
     {
-      "source": "/(.*)",
+      "source": "/((?!api|static).*)",
       "destination": "/index.html"
     }
   ],
