replace error with warn message

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -62,7 +62,7 @@
     "jsx-a11y/role-supports-aria-props": "error",
     "jsx-a11y/scope": "error",
     "jsx-a11y/tabindex-no-positive": "error",
-    "no-console": "warn",
+    "no-console": ["warn", { "allow": ["warn", "error"] }],
     "no-debugger": "error",
     "no-duplicate-imports": "error",
     "no-unused-vars": "off",
